changed name in navigation to inbloom

--- a/views/navigation.jade
+++ b/views/navigation.jade
@@ -4,7 +4,7 @@ block navigation
   div.main.container
     div.navbar
       div.navbar-inner
-        a.brand(href='/dashboard') SLC App
+        a.brand(href='/dashboard') InBloom App
         ul.nav
           li
             a(href='/students') Students
