--- a/views/no_navigation.jade
+++ b/views/no_navigation.jade
@@ -4,4 +4,4 @@ block navigation
   div.main.container
     div.navbar
       div.navbar-inner
-        a.brand(href='#') SLC App
+        a.brand(href='#') InBloom App
